k8s/30-redis.yaml
# Wave 3. Redis backend de queue du dispatcher. Memcached EXCLU (inactif prod).
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: librenms
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          # TODO Nexus : redis:7.2-alpine
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: librenms
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
